# mtl5

./: .clang-format  .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  README.md
benchmarks/: CMakeLists.txt  README.md  analyze_gate.py  analyze_scaling.py  bench_all.cpp  bench_klu.cpp  bench_superlu.cpp  fetch_klu_matrices.sh  fetch_superlu_matrices.sh  plot_results.py  run_scaling.sh  run_sweeps.sh
benchmarks/data/: README.md  blas_sweep_mkl.csv  blas_sweep_native-fast.csv  blas_sweep_native.csv  blas_sweep_openblas.csv  gemm_scaling_mkl.csv  gemm_scaling_native-fast.csv  gemm_scaling_openblas.csv  lapack_sweep_mkl.csv  lapack_sweep_native.csv  lapack_sweep_openblas.csv
benchmarks/harness/: backend.hpp  generators.hpp  op_blas.hpp  op_lapack.hpp  reporter.hpp  runner.hpp  timer.hpp
examples/: CMakeLists.txt  README.md  hello_mtl5.cpp  phase10a_triangular_views.cpp  phase10b_permutation_block_diagonal.cpp  phase11a_strided_views_unit_vectors.cpp  phase11b_fem_assembly_reorder.cpp  phase12a_signal_processing.cpp  phase12b_activation_functions.cpp  phase12c_radioactive_decay.cpp  phase12d_coordinate_geometry.cpp  phase12sa_csv_io_prettyprint.cpp  phase12sb_poisson_diag_toolkit.cpp  phase13a_krylov_comparison.cpp  phase13b_multigrid_poisson.cpp  phase3a_heat_equation_1d.cpp  phase3b_convection_diffusion.cpp  phase4a_laplacian_2d.cpp  phase4b_smoother_convergence.cpp  phase5a_least_squares_qr.cpp  phase5b_solve_three_ways.cpp  phase6a_vibrating_string.cpp  phase6b_pca_svd.cpp  phase7a_sparse_formats.cpp  phase7b_structured_views.cpp  phase8a_expression_benchmark.cpp  phase8b_expression_concepts.cpp  phase9a_sparse_vector.cpp  phase9b_recursive_traversal.cpp  phase9c_blas_dispatch.cpp
examples/phase01_core_types/: concepts_and_traits.cpp  vectors_and_matrices.cpp
examples/phase02_basic_operations/: matrix_arithmetic.cpp  norms_and_products.cpp
examples/phase03_iterative_solvers/: convection_diffusion.cpp  heat_equation_1d.cpp
examples/phase04_sparse_assembly/: laplacian_2d.cpp  smoother_convergence.cpp
examples/phase05_dense_decompositions/: least_squares_qr.cpp  solve_three_ways.cpp
examples/phase06_eigenvalue_svd/: pca_svd.cpp  vibrating_string.cpp
examples/phase07_sparse_formats/: sparse_formats.cpp  structured_views.cpp
examples/phase08_expression_templates/: expression_benchmark.cpp  expression_concepts.cpp
examples/phase09_advanced_types/: blas_dispatch.cpp  recursive_traversal.cpp  sparse_vector.cpp
examples/phase10_matrix_views/: permutation_block_diagonal.cpp  triangular_views.cpp
examples/phase11_assembly_reorder/: fem_assembly_reorder.cpp  strided_views_unit_vectors.cpp
examples/phase12_transcendental_functions/: coordinate_geometry.cpp  radioactive_decay.cpp  signal_processing.cpp
examples/phase12_transcendental_io/: activation_functions.cpp
examples/phase12s_io_generators/: csv_io_prettyprint.cpp
examples/phase13_krylov_multigrid/: krylov_comparison.cpp  multigrid_poisson.cpp
examples/phase14_io_generators/: poisson_diag_toolkit.cpp
examples/phase15_sparse_direct/: circuit_matrix_klu.cpp  fetch_circuit_matrices.sh  sparse_direct_solvers.cpp
examples/ukf_bearing_only/: README.md  bearing_only_ukf.cpp
examples/ukf_cholesky_vs_ldlt/: README.md  ukf_comparison.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/regression/: CMakeLists.txt
tests/regression/dense/: test_cholesky.cpp  test_eigenvalue.cpp  test_ldlt.cpp  test_ldlt_bk.cpp  test_lu.cpp  test_lu_regression.cpp  test_qr.cpp
tests/regression/itl/: test_bicgstab.cpp  test_cg.cpp  test_gmres.cpp
tests/regression/sparse/: test_sparse_cholesky.cpp  test_sparse_ldlt.cpp  test_sparse_lu.cpp  test_sparse_qr.cpp
tests/unit/: CMakeLists.txt
tests/unit/array/: test_interop.cpp  test_ndarray.cpp
tests/unit/concepts/: test_concepts.cpp
tests/unit/detail/: test_aligned_storage.cpp  test_contiguous_memory_block.cpp  test_gemm_microkernel.cpp  test_gemm_pack.cpp  test_thread_pool.cpp
tests/unit/functor/: test_scalar_functors.cpp
tests/unit/generators/: test_clement.cpp  test_companion.cpp  test_forsythe.cpp  test_frank.cpp  test_hilbert.cpp  test_kahan.cpp  test_laplacian.cpp  test_lehmer.cpp  test_lotkin.cpp  test_magic.cpp  test_minij.cpp  test_moler.cpp  test_ones.cpp  test_pascal.cpp  test_poisson2d.cpp  test_randorth.cpp  test_randspd.cpp  test_randsvd.cpp  test_randsym.cpp  test_ranges.cpp  test_rosser.cpp  test_vandermonde.cpp  test_wilkinson.cpp
tests/unit/interface/: test_blas_dispatch.cpp  test_geev_dispatch.cpp  test_klu.cpp  test_lapack_dispatch.cpp  test_umfpack.cpp
tests/unit/io/: png_decode.hpp  test_element_io.cpp  test_matrix_market.cpp  test_png.cpp  test_spy.cpp
tests/unit/itl/: test_advanced_pc.cpp  test_bicg.cpp  test_bicgstab.cpp  test_bicgstab_ell.cpp  test_bicgstab_quire.cpp  test_cg.cpp  test_cg_quire.cpp  test_cgs.cpp  test_eigensolvers.cpp  test_gmres.cpp  test_idr_s.cpp  test_ilu_ic.cpp  test_minres.cpp  test_multigrid.cpp  test_qmr.cpp  test_smoothers.cpp  test_tfqmr.cpp
tests/unit/mat/: test_block_diagonal2D.cpp  test_compressed2D.cpp  test_coordinate2D.cpp  test_dense2D.cpp  test_ell_matrix.cpp  test_matrix_views.cpp  test_permutation_matrix.cpp  test_shifted_inserter.cpp  test_triangular_views.cpp
tests/unit/math/: test_accumulator_traits.cpp  test_zero_one.cpp
tests/unit/operation/: test_accumulator_dispatch.cpp  test_axpy.cpp  test_blas_l2.cpp  test_blas_l3_symmetric.cpp  test_blas_l3_triangular.cpp  test_cholesky.cpp  test_convert.cpp  test_diag_print.cpp  test_dot.cpp  test_dot_accumulator.cpp  test_eigen_general.cpp  test_eigen_symmetric.cpp  test_eigenvalue.cpp  test_expression_templates.cpp  test_factorization_properties.cpp  test_fast_gemm_numeric.cpp  test_gemm_accumulator.cpp  test_gemm_blocked.cpp  test_gemm_mt.cpp  test_gemm_widen_native.cpp  test_gemv.cpp  test_gemv_norms_accumulator.cpp  test_kron.cpp  test_ldlt.cpp  test_ldlt_bk.cpp  test_lu.cpp  test_lu_iterative_refine.cpp  test_matrix_ops.cpp  test_matrix_properties.cpp  test_norms.cpp  (+12 more)
(+427 files in other folders)
